...
            <div className="grid md:grid-cols-2 gap-8">

                <div>

    <p className="text-sm text-gray-500 mb-2">

        Full Name

    </p>

    <input

        type="text"
...
</div>

               <div>

    <p className="text-sm text-gray-500 mb-2">

        Email

    </p>

    <input

        type="email"
...
